--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "bunyan": "^1.8.1",
     "express": "^4.14.0",
-    "socket-io": "0.0.0",
     "socket.io": "^1.4.8"
   }
 }
